--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,5 @@
 .banner {
-  background-image: url('../images/project9.jpg'); /* replace with your banner image path */
+  background-image: url('../images/civil-works.webp'); /* replace with your banner image path */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
